force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Impact__c/agf__ADM_Impact__c.object-meta.xml
<CustomObject>
    <label>Impact</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>