force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Impact__c/fields/agf__Example__c.field-meta.xml
<CustomField>
    <fullName>agf__Example__c</fullName>
    <label>Example</label>
    <type>TextArea</type>
</CustomField>