force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Impact__c/fields/agf__Order__c.field-meta.xml
<CustomField>
    <fullName>agf__Order__c</fullName>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>