force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Impact__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>NAME</columns>
    <columns>agf__Order__c</columns>
    <columns>agf__Description__c</columns>
    <columns>agf__Example__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>